--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -6,6 +6,9 @@
     background: #333;
     padding: 15px 20px;
     color: white;
+    z-index: 1000;
+    position: fixed;
+    width: 100%;
 }
 
 /* Logo */
@@ -25,6 +28,13 @@
 }
 
 .nav-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    transition: 0.3s;
+}
+
+.logo a {
     text-decoration: none;
     color: white;
     font-size: 1rem;
