--- a/frontend/src/pages/CodeEditor.css
+++ b/frontend/src/pages/CodeEditor.css
@@ -6,7 +6,7 @@
 }
 .code-editor{
     border: 1px solid #4c4c4c;
-    margin-top: 10px;
+    margin-top: 70px;
 }
 .editor-container .title{
     padding: 10px;
@@ -46,6 +46,7 @@
     margin-top: 10px;
     background-color: #ffffff;
     border: 1px solid #4c4c4c;
+    margin-bottom: 10px;
 }
 .output p{
     padding: 10px;
