--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -7,24 +7,38 @@
     padding: 15px 20px;
     color: white;
     z-index: 1000;
-    position: fixed;
+    position: sticky;
+    top: 0;
     width: 100%;
+    height: 60px;
 }
 
 /* Logo */
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo-img{
+    width: 40px;
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20%;
+    padding: 5px;
 }
 
 /* Navigation Links */
 .nav-links {
     list-style: none;
     display: flex;
+    gap: 15px;
 }
 
 .nav-links li {
-    margin: 0 15px;
+    /* margin: 0 15px; */
 }
 
 .nav-links a {
@@ -32,6 +46,8 @@
     color: white;
     font-size: 1rem;
     transition: 0.3s;
+    padding: 10px;
+    border: 1px solid transparent;
 }
 
 .logo a {
@@ -43,6 +59,7 @@
 
 .nav-links a:hover {
     color: #ddd;
+    border: 1px solid #ddd;
 }
 
 /* Hamburger Menu */
