--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #222;
+    background-color: #000000;
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -16,9 +16,12 @@
 }
 
 .footer-left, .footer-right {
-    flex: 1;
+    /*flex: 1;*/
     min-width: 250px;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .footer-nav ul {
@@ -38,7 +41,9 @@
 }
 
 .footer-socials {
+    display: flex;
     margin-top: 10px;
+    gap: 10px;
 }
 
 .footer-socials a {
@@ -52,8 +57,8 @@
 }
 
 .icon{
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     text-decoration: none;
     color: white;
 }
@@ -75,10 +80,16 @@
     .footer-container {
         flex-direction: column;
         text-align: center;
+        gap: 10px;
     }
 
     .footer-nav ul {
         flex-direction: column;
         gap: 10px;
+    }
+    .footer-left, .footer-right {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
