--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #333;
+    background: #131313;
     padding: 15px 20px;
     color: white;
     z-index: 1000;
@@ -48,6 +48,7 @@
     transition: 0.3s;
     padding: 10px;
     border: 1px solid transparent;
+    border-radius: 5px;
 }
 
 .logo a {
@@ -67,6 +68,11 @@
     display: none;
     font-size: 1.8rem;
     cursor: pointer;
+}
+
+.active{
+    background-color: #ecb653;
+
 }
 
 /* Responsive Navbar */
