--- a/frontend/src/pages/CodeEditor.css
+++ b/frontend/src/pages/CodeEditor.css
@@ -5,11 +5,13 @@
     flex-direction: column;
 }
 .code-editor{
-    border: 1px solid #4c4c4c;
+    border: 1px solid #b3b3b3;
     margin-top: 10px;
 }
 .editor-container .title{
     padding: 10px;
+    background-color: #fff;
+    /*color: white;*/
 }
 .editor{
     height: 70vh;
@@ -28,24 +30,25 @@
     align-items: end;
 }
 .reset-button{
-    background-color: #E74C3C;
+    background-color: #e1857a;
     height: 40px;
     width: 40px;
     border-radius: 8px;
     padding: 5px;
     border: 1px solid transparent;
-    transition: border-color 0.25s;
+    transition: 0.25s;
 }
 .reset-button:hover {
-    border-color: #ECF0F1;
-
+    border-color: rgba(244, 57, 57, 0.96);
+    color: #fff;
+    background: #ff3131;
 }
 
 
 .output {
     margin-top: 10px;
     background-color: #ffffff;
-    border: 1px solid #4c4c4c;
+    border: 1px solid #b3b3b3;
     margin-bottom: 10px;
 }
 .output p{
@@ -54,23 +57,25 @@
 
 .output .output-text{
     font-size: 16px;
-    background-color: #ffffff;
     padding: 10px;
 }
 
 button {
     border-radius: 8px;
-    border: 1px solid transparent;
+    /*border: 1px solid transparent;*/
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #27AE60;
+    background-color: #FFFAEE;
+    border: 1px solid #7c7c7c;
     cursor: pointer;
-    transition: border-color 0.25s;
+    transition: 0.25s;
 }
 button:hover {
-    border-color: #ECF0F1;
+    border-color: #91ae27;
+    background: #8ca87d;
+    color: #fff;
 }
 button:focus,
 button:focus-visible {
