--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,6 @@
 }
 body{
   font-family: 'Roboto', sans-serif;
-  background: #000 url('assets/body_bg.svg') center center/cover no-repeat;
+  background: #000 url('assets/animated_bg.svg') center center/cover no-repeat;
   /*background: #ffe7c4;*/
 }
